# docs_updater

./: README.md
.claude/: settings.local.json
doc-update-assistant/backend/: .pre-commit.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
doc-update-assistant/backend/.claude/: settings.local.json
doc-update-assistant/backend/data/: openai.github.io_openai-agents-python_.json  openai.github.io_openai-agents-python_agents_.json  openai.github.io_openai-agents-python_config_.json  openai.github.io_openai-agents-python_context_.json  openai.github.io_openai-agents-python_examples_.json  openai.github.io_openai-agents-python_guardrails_.json  openai.github.io_openai-agents-python_handoffs_.json  openai.github.io_openai-agents-python_ja_.json  openai.github.io_openai-agents-python_ja_agents_.json  openai.github.io_openai-agents-python_ja_config_.json  openai.github.io_openai-agents-python_ja_context_.json  openai.github.io_openai-agents-python_ja_examples_.json  openai.github.io_openai-agents-python_ja_guardrails_.json  openai.github.io_openai-agents-python_ja_handoffs_.json  openai.github.io_openai-agents-python_ja_mcp_.json  openai.github.io_openai-agents-python_ja_models_.json  openai.github.io_openai-agents-python_ja_models_litellm_.json  openai.github.io_openai-agents-python_ja_multi_agent_.json  openai.github.io_openai-agents-python_ja_quickstart_.json  openai.github.io_openai-agents-python_ja_ref_.json  openai.github.io_openai-agents-python_ja_ref_agent_.json  openai.github.io_openai-agents-python_ja_ref_agent_output_.json  openai.github.io_openai-agents-python_ja_ref_exceptions_.json  openai.github.io_openai-agents-python_ja_ref_extensions_handoff_filters_.json  openai.github.io_openai-agents-python_ja_ref_extensions_handoff_prompt_.json  openai.github.io_openai-agents-python_ja_ref_extensions_litellm_.json  openai.github.io_openai-agents-python_ja_ref_function_schema_.json  openai.github.io_openai-agents-python_ja_ref_guardrail_.json  openai.github.io_openai-agents-python_ja_ref_handoffs_.json  openai.github.io_openai-agents-python_ja_ref_items_.json  openai.github.io_openai-agents-python_ja_ref_lifecycle_.json  openai.github.io_openai-agents-python_ja_ref_mcp_server_.json  openai.github.io_openai-agents-python_ja_ref_mcp_util_.json  openai.github.io_openai-agents-python_ja_ref_model_settings_.json  openai.github.io_openai-agents-python_ja_ref_models_interface_.json  openai.github.io_openai-agents-python_ja_ref_models_openai_chatcompletions_.json  openai.github.io_openai-agents-python_ja_ref_models_openai_responses_.json  openai.github.io_openai-agents-python_ja_ref_repl_.json  openai.github.io_openai-agents-python_ja_ref_result_.json  openai.github.io_openai-agents-python_ja_ref_run_.json  (+98 more)
doc-update-assistant/backend/src/app/: __init__.py  config.py  main.py
doc-update-assistant/backend/src/app/models/: __init__.py  document.py  suggestion.py
doc-update-assistant/backend/src/app/routers/: __init__.py  documentation.py  suggestions.py
doc-update-assistant/backend/src/app/schemas/: __init__.py  document.py  suggestion.py
doc-update-assistant/backend/src/app/services/: __init__.py  ai_service.py  diff_service.py  document_processor.py  redis_document_processor.py  redis_embedding_service.py  storage_service.py
(+40 files in other folders)
